--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,69 +15,78 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@hookform/resolvers": "^3.3.2",
     "@next/font": "^14.0.4",
-    "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
+    "@react-three/drei": "^9.92.7",
+    "@react-three/fiber": "^8.15.12",
+    "@react-three/postprocessing": "^2.15.11",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "styled-components": "^6.1.6",
-    "framer-motion": "^10.16.16",
-    "gsap": "^3.12.2",
-    "@react-three/fiber": "^8.15.12",
-    "@react-three/drei": "^9.92.7",
-    "three": "^0.159.0",
-    "@react-three/postprocessing": "^2.15.11",
     "@tanstack/react-query": "^5.14.2",
     "@tanstack/react-query-devtools": "^5.14.2",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
-    "zod": "^3.22.4",
-    "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
-    "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
     "class-variance-authority": "^0.7.0",
-    "tailwind-merge": "^2.2.0",
+    "clsx": "^2.0.0",
     "embla-carousel-react": "^8.0.0-rc19",
+    "framer-motion": "^10.16.16",
+    "gsap": "^3.12.2",
+    "immer": "^10.0.3",
+    "lottie-react": "^2.4.0",
+    "lucide-react": "^0.294.0",
+    "next": "^14.0.4",
+    "next-themes": "^0.2.1",
+    "openai": "^4.20.1",
+    "postcss": "^8.4.32",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-image-gallery": "^1.3.0",
     "react-intersection-observer": "^9.5.3",
     "react-use": "^17.4.2",
-    "zustand": "^4.4.7",
-    "immer": "^10.0.3",
-    "openai": "^4.20.1",
+    "sharp": "^0.33.1",
     "socket.io-client": "^4.7.4",
     "stripe": "^14.9.0",
-    "@stripe/stripe-js": "^2.2.2",
-    "@stripe/react-stripe-js": "^2.4.0",
-    "sharp": "^0.33.1",
-    "next-themes": "^0.2.1",
-    "react-dropzone": "^14.2.3",
-    "react-image-gallery": "^1.3.0",
+    "styled-components": "^6.1.6",
     "swiper": "^11.0.5",
-    "lottie-react": "^2.4.0"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.3.6",
+    "three": "^0.159.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@types/three": "^0.159.0",
     "@types/styled-components": "^5.1.34",
-    "typescript": "^5.3.2",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "^14.0.4",
+    "@types/three": "^0.159.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.54.0",
+    "eslint-config-next": "^14.0.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "jest": "^29.7.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "jest-environment-jsdom": "^29.7.0"
+    "typescript": "^5.3.2"
   },
-  "keywords": ["nextjs", "react", "ecommerce", "agriculture", "organic", "3d", "ai"],
+  "keywords": [
+    "nextjs",
+    "react",
+    "ecommerce",
+    "agriculture",
+    "organic",
+    "3d",
+    "ai"
+  ],
   "author": "Vardaan Agro Farm",
   "license": "MIT"
 }
