change in git ignore

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -9,8 +9,8 @@ NEXT_PUBLIC_ENABLE_PWA=true
 
 # Contact Information
 NEXT_PUBLIC_CONTACT_EMAIL=support@vardaanagro.com
-NEXT_PUBLIC_CONTACT_PHONE=+91-9876543210
-NEXT_PUBLIC_CONTACT_ADDRESS=Vardaan Agro Farm, Punjab, India
+NEXT_PUBLIC_CONTACT_PHONE=+91-8283026214
+NEXT_PUBLIC_CONTACT_ADDRESS=Vardaan Agro Farm, Haryana, India
 
 # Development
 NEXT_PUBLIC_DEBUG=false
