--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,11 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
+permissions:               # ✅ Global permissions (fix for SARIF upload issue)
+  contents: read
+  security-events: write   # Required for SARIF upload
+  packages: write          # Required for pushing Docker images
+
 jobs:
   # Backend Tests and Build
   backend-test:
@@ -121,7 +126,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.22.0   # ✅ Pinned version for stability
         with:
           scan-type: 'fs'
           scan-ref: '.'
@@ -140,10 +145,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [backend-test, frontend-test, security-scan]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
-    permissions:
-      contents: read
-      packages: write
 
     steps:
       - name: Checkout code
@@ -209,7 +210,6 @@ jobs:
         run: |
           echo "Deploying to staging environment..."
           # Add your staging deployment commands here
-          # This could be deploying to Railway, Render, or your staging server
 
   # Deploy to Production
   deploy-production:
@@ -232,7 +232,6 @@ jobs:
       - name: Deploy backend to Railway
         run: |
           echo "Deploying backend to Railway..."
-          # Add Railway deployment commands here
           # railway login --token ${{ secrets.RAILWAY_TOKEN }}
           # railway up --service backend
 
@@ -244,7 +243,6 @@ jobs:
       - name: Health check
         run: |
           echo "Performing health checks..."
-          # Add health check commands here
           # curl -f https://api.vardaanagro.com/health
 
   # Notify on deployment
@@ -260,7 +258,6 @@ jobs:
         with:
           status: ${{ job.status }}
           channel: '#deployments'
-          webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
